--- a/CV/index.html
+++ b/CV/index.html
@@ -235,6 +235,13 @@
               </div>
             </div>
           </div>
+          <div class="col-md-6">
+            <div class="progress-container progress-primary"><span class="progress-badge">Microsoft Word</span>
+              <div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div><span class="progress-value">85%</span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
