--- a/CV/index.html
+++ b/CV/index.html
@@ -523,7 +523,7 @@
 </div></div>
     </div>
     <footer class="footer">
-      <div class="container text-center"><a class="cc-whatsapp btn btn-link" href="#"><i class="fa fa-whatsapp fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
+      <div class="container text-center"><a class="cc-whatsapp btn btn-link" href="#"><i class="fa fa-whatsapp fa-2x " aria-hidden="true"></i></a><a class="cc-github btn btn-link " href="https://github.com/noccent"><i class="fa fa-github fa-2x " aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="https://instagram.com/gerenfdz?igshid=ZDc4ODBmNjlmNQ=="><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
       <div class="h4 title text-center">Geren Ferdiaz</div>
       <div class="text-center text-muted">
       </div>
